# 42_Ping

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md
include/: common.h  ft_ping.h  icmp.h  options.h  ping.h  print.h  rtt.h  socket.h
src/: common.c  icmp.c  icmp_msg.c  icmp_ping.c  main.c  options.c  ping.c  print.c  resolve_host.c  rtt.c  socket.c  socket_initialization.c  validate_params.c
src/options/: validate_options.c
src/utils/: print_params.c  timestamp.c
